--- a/client/app/src/main/res/layout/fragment_registration.xml
+++ b/client/app/src/main/res/layout/fragment_registration.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/image_registration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="254dp"
+        android:layout_height="194dp"
         android:layout_marginTop="30dp"
         android:contentDescription="@string/cover_authentication"
         android:src="@drawable/ic_undraw_authentication"
@@ -22,24 +22,23 @@
 
     <ImageView
         android:id="@+id/image_app_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/AppLogo"
         android:layout_marginTop="15dp"
         android:contentDescription="@string/logo_app"
-        android:src="@drawable/ic_natour_logo"
-        app:layout_constraintBottom_toTopOf="@+id/textfield_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_registration" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_username"
-        android:layout_width="250dp"
-        android:layout_height="56dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:hint="@string/hint_username"
+        android:maxWidth="250dp"
+        android:minWidth="250dp"
         app:endIconMode="clear_text"
-        app:layout_constraintBottom_toTopOf="@id/textfield_email"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image_app_logo">
@@ -49,21 +48,22 @@
             android:id="@+id/textinput_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
+            android:inputType="textPersonName"
             tools:ignore="TextContrastCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_email"
-        android:layout_width="250dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:hint="@string/hint_email"
+        android:maxWidth="250dp"
+        android:minWidth="250dp"
         app:endIconMode="clear_text"
-        app:layout_constraintBottom_toTopOf="@+id/textfield_password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:errorEnabled="true"
+        app:layout_constraintEnd_toEndOf="@+id/textfield_username"
+        app:layout_constraintStart_toStartOf="@+id/textfield_username"
         app:layout_constraintTop_toBottomOf="@id/textfield_username">
 
 
@@ -71,21 +71,23 @@
             android:id="@+id/textinput_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
             tools:ignore="TextContrastCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_password"
-        android:layout_width="250dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:hint="@string/hint_password"
+        android:maxWidth="250dp"
+        android:minWidth="250dp"
         app:endIconMode="password_toggle"
-        app:layout_constraintBottom_toTopOf="@id/textfield_confirm_password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textfield_email">
+        app:errorEnabled="true"
+        app:layout_constraintEnd_toEndOf="@+id/textfield_email"
+        app:layout_constraintStart_toStartOf="@+id/textfield_email"
+        app:layout_constraintTop_toBottomOf="@+id/textfield_email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textinput_password"
@@ -98,14 +100,16 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_confirm_password"
-        android:layout_width="250dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:hint="@string/hint_confirm_password"
+        android:maxWidth="250dp"
+        android:minWidth="250dp"
         app:endIconMode="password_toggle"
-        app:layout_constraintBottom_toTopOf="@+id/button_signup"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:errorEnabled="true"
+        app:layout_constraintEnd_toEndOf="@+id/textfield_password"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textfield_password"
         app:layout_constraintTop_toBottomOf="@+id/textfield_password">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -121,14 +125,15 @@
         android:id="@+id/button_signup"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginTop="2dp"
         android:enabled="true"
         android:text="@string/button_signup_send_text"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textfield_confirm_password" />
+        app:layout_constraintEnd_toEndOf="@+id/textfield_confirm_password"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="@+id/textfield_confirm_password"
+        app:layout_constraintTop_toBottomOf="@id/textfield_confirm_password"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
