Aggiornati i package, implementato primo form di pre-validazione

--- a/client/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/client/app/src/main/res/layout/fragment_forgot_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.login.forgot_password.ForgotPasswordFragment">
+    tools:context=".presentation.forgot_password.ForgotPasswordFragment">
 
     <ImageView
         android:id="@+id/image_forgot_password"
